Rename dictionary to vocabulary
